--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,11 @@ h1 {
     transform: translateY(-2px); /* Optional: Slight move to top on hover */
 }
 
+#quizArea button:hover{
+    background-color: papayawhip;
+
+}
+
 #retryButton {
     padding: 10px 20px;
     margin: 10px;
